--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,8 +43,9 @@
                android:logo="@drawable/launcher_icon"
                android:label="@string/app_name"
                android:allowBackup="true">
+    <!-- Module:ZXing,Task:Set orientation from sensorLandscape to portrait,Owner:wangmingdong,Date:2019.0325.1152 -->
     <activity android:name=".CaptureActivity"
-              android:screenOrientation="sensorLandscape"
+              android:screenOrientation="sensor"
               android:clearTaskOnLaunch="true"
               android:stateNotNeeded="true"
               android:theme="@style/CaptureTheme"
